<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:background="@color/morado"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/tv_registro"
            android:layout_width="wrap_content"
            style="@style/text_litle_dark"
            android:layout_height="wrap_content"
            android:id="@+id/log_registro" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.562"
            android:clickable="true"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/bt_facebook"
            style="@style/Boton_dark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/log_facebook" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="44dp"
            android:layout_marginStart="44dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="44dp"
            android:layout_marginRight="44dp" app:layout_constraintBottom_toTopOf="@+id/log_gmail"
            android:layout_marginBottom="24dp"/>
    <Button
            android:text="@string/bt_gmail"
            style="@style/Boton_dark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/log_gmail" app:layout_constraintEnd_toEndOf="@+id/log_facebook"
            app:layout_constraintStart_toStartOf="@+id/log_facebook"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/log_ingresar"/>
    <Button
            android:background="@drawable/boton_dark2"
            android:text="@string/bt_ingresar"
            style="@style/Boton_dark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/log_ingresar" app:layout_constraintStart_toStartOf="@+id/log_gmail"
            app:layout_constraintEnd_toEndOf="@+id/log_gmail"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/log_registro"/>
</android.support.constraint.ConstraintLayout>