<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:background="@color/morado"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <EditText
            style="@style/Text_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hint_nombre"
            android:paddingLeft="74dp"
            android:ems="10"
            android:id="@+id/reg_et_nombre" android:layout_marginStart="44dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="44dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="44dp"
            android:layout_marginEnd="44dp" app:layout_constraintBottom_toTopOf="@+id/reg_et_correo"
            android:layout_marginBottom="24dp"/>
    <EditText
            style="@style/Text_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="74dp"
            android:paddingStart="74dp"
            android:paddingRight="24dp"
            android:hint="@string/hint_correo"
            android:paddingEnd="24dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/reg_et_correo"
            app:layout_constraintStart_toStartOf="@+id/reg_et_nombre"
            app:layout_constraintEnd_toEndOf="@+id/reg_et_nombre"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/reg_et_contrasena"/>
    <EditText
            android:layout_width="0dp"
            android:hint="@string/hint_contrasena1"
            android:layout_height="wrap_content"
            android:paddingLeft="74dp"
            android:inputType="textPassword"
            android:ems="10"
            style="@style/Text_edittext"
            android:id="@+id/reg_et_contrasena"
            app:layout_constraintStart_toStartOf="@+id/reg_et_correo" app:layout_constraintEnd_toEndOf="@+id/reg_et_correo"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/reg_et_contrasena2"/>
    <EditText
            android:layout_width="0dp"
            android:hint="@string/hint_contrasena2"
            android:layout_height="wrap_content"
            android:paddingLeft="74dp"
            android:paddingStart="74dp"
            android:paddingRight="24dp"
            android:paddingEnd="24dp"
            android:inputType="textPassword"
            android:ems="10"
            style="@style/Text_edittext"
            android:id="@+id/reg_et_contrasena2"
            app:layout_constraintStart_toStartOf="@+id/reg_et_contrasena" app:layout_constraintEnd_toEndOf="@+id/reg_et_contrasena"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/reg_bt_aceptar"/>
    <Button
            android:text="@string/registrar"
            style="@style/Boton_dark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/reg_bt_aceptar"
            app:layout_constraintEnd_toEndOf="@+id/reg_et_contrasena2"
            app:layout_constraintStart_toStartOf="@+id/reg_et_contrasena2"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/reg_bt_cancelar"/>
    <TextView
            android:text="@string/titulo_registro"
            style="@style/Text_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"/>
    <ImageView
            android:layout_width="34sp"
            android:layout_height="0dp" android:src="@drawable/correo"
            android:id="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/reg_et_correo"
            app:layout_constraintBottom_toBottomOf="@+id/reg_et_correo"
            app:layout_constraintStart_toStartOf="@+id/reg_et_correo" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="10dp" android:layout_marginBottom="10dp"/>
    <ImageView
            android:layout_width="34dp"
            android:layout_height="0dp" android:src="@drawable/user"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/reg_et_nombre"
            app:layout_constraintBottom_toBottomOf="@+id/reg_et_nombre"
            app:layout_constraintStart_toStartOf="@+id/reg_et_nombre" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="10dp" android:layout_marginBottom="10dp"/>
    <ImageView
            android:elevation="2dp"
            android:layout_width="34dp"
            android:layout_height="0dp" android:src="@drawable/key"
            android:id="@+id/imageView4" app:layout_constraintStart_toStartOf="@+id/reg_et_contrasena"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/reg_et_contrasena"
            app:layout_constraintBottom_toBottomOf="@+id/reg_et_contrasena"
            android:layout_marginTop="10dp" android:layout_marginBottom="10dp"/>
    <ImageView
            android:layout_width="34sp"
            android:layout_height="0dp" android:src="@drawable/key"
            android:id="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/reg_et_contrasena2"
            app:layout_constraintBottom_toBottomOf="@+id/reg_et_contrasena2"
            app:layout_constraintStart_toStartOf="@+id/reg_et_contrasena2" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="10dp" android:layout_marginBottom="10dp"/>
    <Button
            android:text="@string/bt_cancelar"
            style="@style/Boton_dark"
            android:background="@color/morado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reg_bt_cancelar" app:layout_constraintStart_toStartOf="@+id/reg_bt_aceptar"
            app:layout_constraintEnd_toEndOf="@+id/reg_bt_aceptar"
            android:layout_marginBottom="44dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>